fixed inference, cleanup

--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -49,28 +49,24 @@
     "import random\n",
     "import statistics\n",
     "import time\n",
-    "from functools import partial\n",
     "\n",
     "import fasttext\n",
     "import numpy as np\n",
-    "import onnxruntime as ort\n",
     "import pandas as pd\n",
-    "import torch\n",
+    "\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from tqdm import tqdm\n",
-    "from transformers import AutoTokenizer\n",
     "from xgboost import XGBClassifier\n",
-    "os.chdir('..')\n",
+    "\n",
     "from prompt_classifier.metrics import evaluate_run\n",
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
     "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
-    "from prompt_classifier.modeling.widemlp import MLP\n",
     "\n",
     "load_dotenv()\n",
     "random.seed(22)\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
    ]
   },
   {
@@ -92,14 +88,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Jigsaw dataset\n",
     "jigsaw_splits = {\n",
     "    \"train\": \"train_dataset.csv\",\n",
     "    \"validation\": \"val_dataset.csv\",\n",
     "    \"test\": \"test_dataset.csv\",\n",
     "}\n",
     "jigsaw_df = pd.read_csv(\n",
-    "    \"hf://datasets/Arsive/toxicity_classification_jigsaw/\" + jigsaw_splits[\"validation\"]\n",
+    "    \"hf://datasets/Arsive/toxicity_classification_jigsaw/\"\n",
+    "    + jigsaw_splits[\"validation\"]\n",
     ")\n",
     "\n",
     "jigsaw_df = jigsaw_df[\n",
@@ -119,7 +115,7 @@
     "\n",
     "# Load OLID dataset\n",
     "olid_splits = {\"train\": \"train.csv\", \"test\": \"test.csv\"}\n",
-    "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"train\"])\n",
+    "olid_df = pd.read_csv(\"hf://datasets/christophsonntag/OLID/\" + olid_splits[\"test\"])\n",
     "olid_df = olid_df.rename(columns={\"cleaned_tweet\": \"prompt\"})\n",
     "olid_df[\"label\"] = 0\n",
     "olid_df = olid_df[[\"prompt\", \"label\"]]\n",
@@ -127,20 +123,21 @@
     "olid_df = olid_df[olid_df[\"prompt\"].str.strip() != \"\"]\n",
     "\n",
     "# Load hateXplain dataset\n",
-    "hateXplain = pd.read_parquet(\n",
+    "hate_xplain = pd.read_parquet(\n",
     "    \"hf://datasets/nirmalendu01/hateXplain_filtered/data/train-00000-of-00001.parquet\"\n",
     ")\n",
-    "hateXplain = hateXplain.rename(columns={\"test_case\": \"prompt\"})\n",
-    "hateXplain = hateXplain[(hateXplain[\"gold_label\"] == \"hateful\")]\n",
-    "hateXplain = hateXplain[[\"prompt\", \"label\"]]\n",
-    "hateXplain[\"label\"] = 0\n",
-    "hateXplain = hateXplain.dropna(subset=[\"prompt\"])\n",
-    "hateXplain = hateXplain[hateXplain[\"prompt\"].str.strip() != \"\"]\n",
+    "hate_xplain = hate_xplain.rename(columns={\"test_case\": \"prompt\"})\n",
+    "hate_xplain = hate_xplain[(hate_xplain[\"gold_label\"] == \"hateful\")]\n",
+    "hate_xplain = hate_xplain[[\"prompt\", \"label\"]]\n",
+    "hate_xplain[\"label\"] = 0\n",
+    "hate_xplain = hate_xplain.dropna(subset=[\"prompt\"])\n",
+    "hate_xplain = hate_xplain[hate_xplain[\"prompt\"].str.strip() != \"\"]\n",
     "\n",
     "# Load TUKE Slovak dataset\n",
     "tuke_sk_splits = {\"train\": \"train.json\", \"test\": \"test.json\"}\n",
     "tuke_sk_df = pd.read_json(\n",
-    "    \"hf://datasets/TUKE-KEMT/hate_speech_slovak/\" + tuke_sk_splits[\"train\"], lines=True\n",
+    "    \"hf://datasets/TUKE-KEMT/hate_speech_slovak/\" + tuke_sk_splits[\"test\"],\n",
+    "    lines=True,\n",
     ")\n",
     "tuke_sk_df = tuke_sk_df.rename(columns={\"text\": \"prompt\"})\n",
     "tuke_sk_df = tuke_sk_df[tuke_sk_df[\"label\"] == 0]\n",
@@ -148,13 +145,6 @@
     "tuke_sk_df = tuke_sk_df.dropna(subset=[\"prompt\"])\n",
     "tuke_sk_df = tuke_sk_df[tuke_sk_df[\"prompt\"].str.strip() != \"\"]\n",
     "\n",
-    "# Load DKK dataset\n",
-    "dkk = pd.read_parquet(\"data/test-00000-of-00001.parquet\")\n",
-    "dkk = dkk.rename(columns={\"text\": \"prompt\"})\n",
-    "dkk = dkk[dkk[\"label\"] == \"OFF\"].reset_index(drop=True)\n",
-    "dkk[\"label\"] = 0\n",
-    "dkk = dkk.dropna(subset=[\"prompt\"])\n",
-    "dkk = dkk[dkk[\"prompt\"].str.strip() != \"\"]\n",
     "\n",
     "dkk_all = pd.read_parquet(\"data/test-00000-of-00001.parquet\")\n",
     "dkk_all = dkk_all.rename(columns={\"text\": \"prompt\"})\n",
@@ -162,14 +152,40 @@
     "dkk_all = dkk_all.dropna(subset=[\"prompt\"])\n",
     "dkk_all = dkk_all[dkk_all[\"prompt\"].str.strip() != \"\"]\n",
     "\n",
+    "splits = {'train': 'data/train-00000-of-00001.parquet', 'test': 'data/test-00000-of-00001.parquet'}\n",
+    "web_questions = pd.read_parquet(\"hf://datasets/Stanford/web_questions/\" + splits[\"test\"])\n",
+    "\n",
+    "web_questions['prompt'] = web_questions['question']\n",
+    "web_questions['label'] = 0\n",
+    "web_questions['dataset'] = 'web_questions'\n",
+    "web_questions = web_questions[['prompt', 'label']]\n",
+    "\n",
+    "splits = {'train': 'data/train-00000-of-00001-7ebb9cdef03dd950.parquet', 'test': 'data/test-00000-of-00001-fbd3905b045b12b8.parquet'}\n",
+    "ml_questions = pd.read_parquet(\"hf://datasets/mjphayes/machine_learning_questions/\" + splits[\"test\"])\n",
+    "\n",
+    "ml_questions['prompt'] = ml_questions['question']\n",
+    "ml_questions['label'] = 0\n",
+    "ml_questions['dataset'] = 'machine_learning_questions'\n",
+    "ml_questions = ml_questions[['prompt', 'label']]\n",
+    "\n",
     "datasets = {\n",
     "    \"jigsaw\": jigsaw_df,\n",
     "    \"olid\": olid_df,\n",
-    "    \"hate_xplain\": hateXplain,\n",
+    "    \"hate_xplain\": hate_xplain,\n",
     "    \"tuke_sk\": tuke_sk_df,\n",
-    "    \"dkk\": dkk,\n",
-    "    \"dkk_all\": dkk_all,\n",
+    "    \"dkk\": dkk_all,\n",
+    "    \"web_questions\": web_questions,\n",
+    "    \"ml_questions\": ml_questions,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = [1, 16, 32, 64, 128, 256]"
    ]
   },
   {
@@ -180,10 +196,11 @@
    "source": [
     "display(jigsaw_df.head())\n",
     "display(olid_df.head())\n",
-    "display(hateXplain.head())\n",
+    "display(hate_xplain.head())\n",
     "display(tuke_sk_df.head())\n",
-    "display(dkk.head())\n",
-    "display(dkk_all.head())"
+    "display(dkk_all.head())\n",
+    "display(web_questions.head())\n",
+    "display(ml_questions.head())"
    ]
   },
   {
@@ -533,28 +550,28 @@
     "# Embedding test data\n",
     "for embedding_model in embedding_models_names:\n",
     "    for domain, inference_df in datasets.items():\n",
-    "        # Get actual labels once\n",
+    "        print(f\"Processing {domain} dataset with {embedding_model} embeddings...\")\n",
     "        actuals_ml = inference_df[\"label\"].tolist()\n",
     "\n",
-    "        # Get embeddings based on model type\n",
-    "        if embedding_model == \"tf_idf\":\n",
-    "            test_embeds = tfidf_finance.transform(inference_df[\"prompt\"])\n",
-    "        else:\n",
-    "            start_time = time.perf_counter_ns()\n",
-    "            if embedding_model == \"mini\":\n",
-    "                test_embeds = np.array(\n",
-    "                    list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
-    "            else:  # baai\n",
-    "                test_embeds = np.array(\n",
-    "                    list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                )\n",
-    "            end_time = time.perf_counter_ns()\n",
-    "            embed_times = end_time - start_time\n",
-    "            mean_embed_time = embed_times / len(inference_df)\n",
-    "\n",
-    "        # Load models\n",
+    "        # Get embeddings once per dataset\n",
     "        try:\n",
+    "            if embedding_model == \"tf_idf\":\n",
+    "                test_embeds = tfidf_finance.transform(inference_df[\"prompt\"])\n",
+    "            else:\n",
+    "                start_time = time.perf_counter_ns()\n",
+    "                if embedding_model == \"mini\":\n",
+    "                    test_embeds = np.array(\n",
+    "                        list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
+    "                    )\n",
+    "                else:  # baai\n",
+    "                    test_embeds = np.array(\n",
+    "                        list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
+    "                    )\n",
+    "                end_time = time.perf_counter_ns()\n",
+    "                embed_times = end_time - start_time\n",
+    "                mean_embed_time = embed_times / len(inference_df)\n",
+    "\n",
+    "            # Load models once per embedding type\n",
     "            # Load SVM models\n",
     "            with open(f\"models/SVM_finance_{embedding_model}.pkl\", \"rb\") as f:\n",
     "                svm_classifier_finance = pkl.load(f)\n",
@@ -576,183 +593,74 @@
     "            )\n",
     "            xgb_classifier_law.load_model(f\"models/XGBoost_law_{embedding_model}.json\")\n",
     "\n",
-    "            predictions_xgb = []\n",
-    "            predictions_svm = []\n",
-    "            prediction_times_xgb = []\n",
-    "            prediction_times_svm = []\n",
+    "            # Process different batch sizes\n",
+    "            for batch in batch_size:\n",
+    "                predictions_xgb = []\n",
+    "                predictions_svm = []\n",
+    "                prediction_times_xgb = []\n",
+    "                prediction_times_svm = []\n",
     "\n",
-    "            # Make predictions\n",
-    "            for test_embed in test_embeds:\n",
-    "                test_embed = test_embed.reshape(1, -1)\n",
+    "                # Process embeddings in batches\n",
+    "                for i in range(0, test_embeds.shape[0], batch):\n",
+    "                    batch_embeds = test_embeds[i:i + batch]\n",
+    "                    # SVM predictions\n",
+    "                    start_time = time.perf_counter_ns()\n",
+    "                    pred_finance = svm_classifier_finance.predict(batch_embeds)\n",
+    "                    pred_healthcare = svm_classifier_healthcare.predict(batch_embeds)\n",
+    "                    pred_law = svm_classifier_law.predict(batch_embeds)\n",
+    "                    end_time = time.perf_counter_ns()\n",
+    "                    prediction_times_svm.extend([end_time - start_time])\n",
     "\n",
-    "                # SVM predictions\n",
-    "                start_time = time.perf_counter_ns()\n",
-    "                pred_finance = svm_classifier_finance.predict(test_embed)\n",
-    "                pred_healthcare = svm_classifier_healthcare.predict(test_embed)\n",
-    "                pred_law = svm_classifier_law.predict(test_embed)\n",
-    "                end_time = time.perf_counter_ns()\n",
+    "                    # Combine predictions for the batch\n",
+    "                    batch_preds = np.zeros(batch_embeds.shape[0])\n",
+    "                    batch_preds[(pred_finance == 1) | (pred_healthcare == 1) | (pred_law == 1)] = 0\n",
+    "                    batch_preds[(pred_finance != 1) & (pred_healthcare != 1) & (pred_law != 1)] = 1\n",
+    "                    predictions_svm.extend(batch_preds)\n",
     "\n",
-    "                prediction_times_svm.append(end_time - start_time)\n",
-    "                predictions_svm.append(\n",
-    "                    0\n",
-    "                    if (\n",
-    "                        pred_finance[0] == 1\n",
-    "                        or pred_healthcare[0] == 1\n",
-    "                        or pred_law[0] == 1\n",
-    "                    )\n",
-    "                    else 1\n",
+    "                    # XGBoost predictions\n",
+    "                    start_time = time.perf_counter_ns()\n",
+    "                    pred_finance = xgb_classifier_finance.predict(batch_embeds)\n",
+    "                    pred_healthcare = xgb_classifier_healthcare.predict(batch_embeds)\n",
+    "                    pred_law = xgb_classifier_law.predict(batch_embeds)\n",
+    "                    end_time = time.perf_counter_ns()\n",
+    "                    prediction_times_xgb.extend([end_time - start_time])\n",
+    "\n",
+    "                    # Combine predictions for the batch\n",
+    "                    batch_preds = np.zeros(batch_embeds.shape[0])\n",
+    "                    batch_preds[(pred_finance == 1) | (pred_healthcare == 1) | (pred_law == 1)] = 0\n",
+    "                    batch_preds[(pred_finance != 1) & (pred_healthcare != 1) & (pred_law != 1)] = 1\n",
+    "                    predictions_xgb.extend(batch_preds)\n",
+    "\n",
+    "                # Evaluate results for this batch size\n",
+    "                evaluate_run(\n",
+    "                    predictions=predictions_svm,\n",
+    "                    true_labels=actuals_ml,\n",
+    "                    latency=statistics.mean(prediction_times_svm),\n",
+    "                    domain=domain,\n",
+    "                    embed_model=f'{embedding_model}-{batch}',\n",
+    "                    model_name=\"SVM\",\n",
+    "                    train_acc=0.0,\n",
+    "                    cost=0.0,\n",
+    "                    training=False,\n",
+    "                )\n",
+    "                evaluate_run(\n",
+    "                    predictions=predictions_xgb,\n",
+    "                    true_labels=actuals_ml,\n",
+    "                    latency=statistics.mean(prediction_times_xgb),\n",
+    "                    domain=domain,\n",
+    "                    embed_model=f'{embedding_model}-{batch}',\n",
+    "                    model_name=\"XGBoost\",\n",
+    "                    train_acc=0.0,\n",
+    "                    cost=0.0,\n",
+    "                    training=False,\n",
     "                )\n",
     "\n",
-    "                # XGBoost predictions\n",
-    "                start_time = time.perf_counter_ns()\n",
-    "                pred_finance = xgb_classifier_finance.predict(test_embed)\n",
-    "                pred_healthcare = xgb_classifier_healthcare.predict(test_embed)\n",
-    "                pred_law = xgb_classifier_law.predict(test_embed)\n",
-    "                end_time = time.perf_counter_ns()\n",
-    "\n",
-    "                prediction_times_xgb.append(end_time - start_time)\n",
-    "                predictions_xgb.append(\n",
-    "                    0\n",
-    "                    if (\n",
-    "                        pred_finance[0] == 1\n",
-    "                        or pred_healthcare[0] == 1\n",
-    "                        or pred_law[0] == 1\n",
-    "                    )\n",
-    "                    else 1\n",
-    "                )\n",
-    "\n",
-    "            # Evaluate results\n",
-    "            evaluate_run(\n",
-    "                predictions=predictions_svm,\n",
-    "                true_labels=actuals_ml,\n",
-    "                latency=statistics.mean(prediction_times_svm),\n",
-    "                domain=domain,\n",
-    "                embed_model=embedding_model,\n",
-    "                model_name=\"SVM\",\n",
-    "                train_acc=0.0,\n",
-    "                cost=0.0,\n",
-    "                training=False,\n",
-    "            )\n",
-    "            evaluate_run(\n",
-    "                predictions=predictions_xgb,\n",
-    "                true_labels=actuals_ml,\n",
-    "                latency=statistics.mean(prediction_times_xgb),\n",
-    "                domain=domain,\n",
-    "                embed_model=embedding_model,\n",
-    "                model_name=\"XGBoost\",\n",
-    "                train_acc=0.0,\n",
-    "                cost=0.0,\n",
-    "                training=False,\n",
-    "            )\n",
     "        except Exception as e:\n",
     "            print(\n",
     "                f\"Error processing {domain} dataset with {embedding_model} embeddings: {e}\"\n",
     "            )\n",
     "            continue"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MLP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/all-MiniLM-L6-v2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize tokenizer function for batch processing\n",
-    "tokenizer_func = partial(\n",
-    "    tokenizer, padding=True, truncation=True, return_tensors=\"pt\", max_length=512\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    # Load ONNX models\n",
-    "    mlp_classifier = ort.InferenceSession(\n",
-    "        \"models_5/text_classifier_optimized_int8.onnx\",\n",
-    "        providers=['CUDAExecutionProvider', 'CPUExecutionProvider']\n",
-    "    )\n",
-    "    print(\"Successfully loaded all ONNX models\")\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"Error loading ONNX models: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for domain, inference_df in datasets.items():\n",
-    "    print(f\"\\nProcessing {domain} dataset...\")\n",
-    "    predictions_mlp = []\n",
-    "    prediction_times_mlp = []\n",
-    "    actuals_mlp = []\n",
-    "\n",
-    "    try:\n",
-    "        for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
-    "            # Tokenize input text\n",
-    "            start_time = time.perf_counter_ns()\n",
-    "            inputs = tokenizer_func(row[\"prompt\"])\n",
-    "\n",
-    "            # Convert to numpy arrays for ONNX\n",
-    "            onnx_inputs = {\n",
-    "                'input_ids': inputs['input_ids'].numpy(),\n",
-    "                'attention_mask': inputs['attention_mask'].numpy(),\n",
-    "            }\n",
-    "\n",
-    "            # Run inference\n",
-    "            pred = mlp_classifier.run(None, onnx_inputs)[0]\n",
-    "            end_time = time.perf_counter_ns()\n",
-    "\n",
-    "            prediction_times_mlp.append(end_time - start_time)\n",
-    "            predictions_mlp.append(0 if np.argmax(pred) == 1 else 1)\n",
-    "            actuals_mlp.append(row[\"label\"])\n",
-    "\n",
-    "        # Evaluate results\n",
-    "        evaluate_run(\n",
-    "            predictions=predictions_mlp,\n",
-    "            true_labels=actuals_mlp,\n",
-    "            latency=statistics.mean(prediction_times_mlp),\n",
-    "            domain=domain,\n",
-    "            embed_model=\"MiniLM-L12\",\n",
-    "            model_name=\"MLP-ONNX\",\n",
-    "            train_acc=0.0,\n",
-    "            cost=0.0,\n",
-    "            training=False,\n",
-    "        )\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing {domain} dataset: {e}\")\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -764,7 +672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
