--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,15 +49,18 @@
     "import random\n",
     "import statistics\n",
     "import time\n",
+    "from functools import partial\n",
     "\n",
     "import fasttext\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import onnxruntime as ort\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from tqdm import tqdm\n",
     "from xgboost import XGBClassifier\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
     "from prompt_classifier.metrics import evaluate_run\n",
     "from prompt_classifier.modeling.dspy_llm import LlmClassifier\n",
@@ -80,6 +83,16 @@
     "- OLID\n",
     "- HateXplain\n",
     "- TUKE Slovak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain_data = pd.read_csv(\"data/domain_eval.csv\")\n",
+    "ood_data = pd.read_csv(\"data/ood_eval.csv\")"
    ]
   },
   {
@@ -259,7 +272,8 @@
    "outputs": [],
    "source": [
     "baai_embedding = TextEmbedding(\n",
-    "    model_name=\"BAAI/bge-small-en-v1.5\", providers=[\"CUDAExecutionProvider\"]\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\", \n",
+    "    providers=[\"CUDAExecutionProvider\"]\n",
     ")\n",
     "\n",
     "mini_embedding = TextEmbedding(\n",
@@ -663,6 +677,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tibor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/all-MiniLM-L6-v2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize tokenizer function for batch processing\n",
+    "tokenizer_func = partial(\n",
+    "    tokenizer, padding=True, truncation=True, return_tensors=\"pt\", max_length=512\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "law - 0 \\\n",
+    "finance - 1 \\\n",
+    "healthcare - 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    # Load ONNX models\n",
+    "    mlp_classifier = ort.InferenceSession(\n",
+    "        \"models/text_classifier_optimized_int8.onnx\",\n",
+    "        providers=['CUDAExecutionProvider', 'CPUExecutionProvider']\n",
+    "    )\n",
+    "    print(\"Successfully loaded all ONNX models\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading ONNX models: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain_data = pd.read_csv(\"data/domain_eval.csv\")\n",
+    "ood_data = pd.read_csv(\"data/ood_eval.csv\")\n",
+    "\n",
+    "data = {\"domain\": domain_data, \"ood\": ood_data}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for domain, inference_df in data.items():\n",
+    "    print(f\"\\nProcessing {domain} dataset...\")\n",
+    "    predictions_mlp = []\n",
+    "    prediction_times_mlp = []\n",
+    "    actuals_mlp = []\n",
+    "\n",
+    "    try:\n",
+    "        for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
+    "            # Tokenize input text\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            inputs = tokenizer_func(row[\"prompt\"])\n",
+    "\n",
+    "            # Convert to numpy arrays for ONNX\n",
+    "            onnx_inputs = {\n",
+    "                'input_ids': inputs['input_ids'].numpy(),\n",
+    "                'attention_mask': inputs['attention_mask'].numpy(),\n",
+    "            }\n",
+    "\n",
+    "            # Run inference\n",
+    "            pred = mlp_classifier.run(None, onnx_inputs)[0]\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            prediction_times_mlp.append(end_time - start_time)\n",
+    "            predictions_mlp.append(0 if np.argmax(pred) == 3 else 1)\n",
+    "            \n",
+    "\n",
+    "        # Evaluate results\n",
+    "        evaluate_run(\n",
+    "            predictions=predictions_mlp,\n",
+    "            true_labels=actuals_mlp,\n",
+    "            latency=statistics.mean(prediction_times_mlp),\n",
+    "            domain=domain,\n",
+    "            embed_model=\"MiniLM_L12\",\n",
+    "            model_name=\"MLP_ONNX\",\n",
+    "            train_acc=0.0,\n",
+    "            cost=0.0,\n",
+    "            training=False,\n",
+    "        )\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {domain} dataset: {e}\")\n",
+    "        continue\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -675,18 +805,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
