batch inference + cupy

--- a/notebooks/06_inference_v2.ipynb
+++ b/notebooks/06_inference_v2.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sizes = [1, 16, 32, 64, 128, 256]"
+    "batch_sizes = [1, 32, 64, 128, 256]"
    ]
   },
   {
@@ -296,98 +296,72 @@
     }
    ],
    "source": [
+    "def get_embeddings(embedding_model, texts):\n",
+    "    if embedding_model == \"tf_idf\":\n",
+    "        return tfidf_finance.transform(texts)\n",
+    "    elif embedding_model == \"mini\":\n",
+    "        return np.array(list(mini_embedding.embed(texts)))\n",
+    "    else:  # baai\n",
+    "        return np.array(list(baai_embedding.embed(texts)))\n",
+    "\n",
+    "def predict_batch(texts, embedding_model, classifiers, batch_size):\n",
+    "    predictions = []\n",
+    "    embeddings = get_embeddings(embedding_model, texts)\n",
+    "    \n",
+    "    for i in range(0, len(texts), batch_size):\n",
+    "        batch_embeds = embeddings[i:i + batch_size]\n",
+    "        \n",
+    "        # Get predictions from all three domains\n",
+    "        preds = [clf.predict(batch_embeds) for clf in classifiers]\n",
+    "        \n",
+    "        # Combine predictions for the batch\n",
+    "        batch_preds = np.zeros(batch_embeds.shape[0])\n",
+    "        batch_preds[(preds[0] == 1) | (preds[1] == 1) | (preds[2] == 1)] = 0\n",
+    "        batch_preds[(preds[0] != 1) & (preds[1] != 1) & (preds[2] != 1)] = 1\n",
+    "        \n",
+    "        predictions.extend(batch_preds)\n",
+    "    \n",
+    "    return predictions\n",
+    "\n",
     "# ML Models inference\n",
     "for embedding_model in embedding_models_names:\n",
     "    for dataset_name, inference_df in {'domain': domain_data, 'ood': ood_data}.items():\n",
     "        print(f\"Processing {dataset_name} dataset with {embedding_model} embeddings...\")\n",
-    "        predictions_xgb = []\n",
-    "        predictions_svm = []\n",
-    "\n",
     "        try:\n",
-    "            actuals_ml = inference_df[\"label\"].tolist()\n",
-    "\n",
-    "            # Get embeddings once per dataset\n",
-    "            if embedding_model == \"tf_idf\":\n",
-    "                test_embeds = tfidf_finance.transform(inference_df[\"prompt\"])\n",
-    "            else:\n",
-    "                start_time = time.perf_counter_ns()\n",
-    "                if embedding_model == \"mini\":\n",
-    "                    test_embeds = np.array(\n",
-    "                        list(mini_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                    )\n",
-    "                else:  # baai\n",
-    "                    test_embeds = np.array(\n",
-    "                        list(baai_embedding.embed(inference_df[\"prompt\"]))\n",
-    "                    )\n",
-    "                end_time = time.perf_counter_ns()\n",
-    "                embed_times = end_time - start_time\n",
-    "                mean_embed_time = embed_times / len(inference_df)\n",
-    "\n",
-    "            # Load models once per embedding type\n",
     "            # Load SVM models\n",
-    "            with open(f\"models/SVM_finance_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "                svm_classifier_finance = pkl.load(f)\n",
-    "            with open(f\"models/SVM_healthcare_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "                svm_classifier_healthcare = pkl.load(f)\n",
-    "            with open(f\"models/SVM_law_{embedding_model}.pkl\", \"rb\") as f:\n",
-    "                svm_classifier_law = pkl.load(f)\n",
-    "\n",
+    "            svm_classifiers = [\n",
+    "                pkl.load(open(f\"models/SVM_{domain}_{embedding_model}.pkl\", \"rb\"))\n",
+    "                for domain in [\"finance\", \"healthcare\", \"law\"]\n",
+    "            ]\n",
+    "            \n",
     "            # Load XGBoost models\n",
-    "            xgb_classifier_finance = XGBClassifier()\n",
-    "            xgb_classifier_healthcare = XGBClassifier()\n",
-    "            xgb_classifier_law = XGBClassifier()\n",
-    "\n",
-    "            xgb_classifier_finance.load_model(\n",
-    "                f\"models/XGBoost_finance_{embedding_model}.json\"\n",
+    "            xgb_classifiers = []\n",
+    "            for domain in [\"finance\", \"healthcare\", \"law\"]:\n",
+    "                clf = XGBClassifier()\n",
+    "                clf.load_model(f\"models/XGBoost_{domain}_{embedding_model}.json\")\n",
+    "                xgb_classifiers.append(clf)\n",
+    "            \n",
+    "            # Get predictions using batch processing\n",
+    "            predictions_svm = predict_batch(\n",
+    "                inference_df[\"prompt\"].tolist(), \n",
+    "                embedding_model, \n",
+    "                svm_classifiers, \n",
+    "                batch_size=128\n",
     "            )\n",
-    "            xgb_classifier_healthcare.load_model(\n",
-    "                f\"models/XGBoost_healthcare_{embedding_model}.json\"\n",
+    "            \n",
+    "            predictions_xgb = predict_batch(\n",
+    "                inference_df[\"prompt\"].tolist(), \n",
+    "                embedding_model, \n",
+    "                xgb_classifiers, \n",
+    "                batch_size=128\n",
     "            )\n",
-    "            xgb_classifier_law.load_model(f\"models/XGBoost_law_{embedding_model}.json\")\n",
-    "\n",
-    "            # Process different batch sizes\n",
-    "            for batch in batch_sizes:\n",
-    "                prediction_times_xgb = []\n",
-    "                prediction_times_svm = []\n",
-    "\n",
-    "                # Process embeddings in batches\n",
-    "                for i in range(0, test_embeds.shape[0], batch):\n",
-    "                    batch_embeds = test_embeds[i:i + batch]\n",
-    "                    # SVM predictions\n",
-    "                    start_time = time.perf_counter_ns()\n",
-    "                    pred_finance = svm_classifier_finance.predict(batch_embeds)\n",
-    "                    pred_healthcare = svm_classifier_healthcare.predict(batch_embeds)\n",
-    "                    pred_law = svm_classifier_law.predict(batch_embeds)\n",
-    "                    end_time = time.perf_counter_ns()\n",
-    "                    prediction_times_svm.extend([end_time - start_time])\n",
-    "\n",
-    "                    # Combine predictions for the batch\n",
-    "                    batch_preds = np.zeros(batch_embeds.shape[0])\n",
-    "                    batch_preds[(pred_finance == 1) | (pred_healthcare == 1) | (pred_law == 1)] = 0\n",
-    "                    batch_preds[(pred_finance != 1) & (pred_healthcare != 1) & (pred_law != 1)] = 1\n",
-    "                    predictions_svm.extend(batch_preds)\n",
-    "\n",
-    "                    # XGBoost predictions\n",
-    "                    start_time = time.perf_counter_ns()\n",
-    "                    pred_finance = xgb_classifier_finance.predict(batch_embeds)\n",
-    "                    pred_healthcare = xgb_classifier_healthcare.predict(batch_embeds)\n",
-    "                    pred_law = xgb_classifier_law.predict(batch_embeds)\n",
-    "                    end_time = time.perf_counter_ns()\n",
-    "                    prediction_times_xgb.extend([end_time - start_time])\n",
-    "\n",
-    "                    # Combine predictions for the batch\n",
-    "                    batch_preds = np.zeros(batch_embeds.shape[0])\n",
-    "                    batch_preds[(pred_finance == 1) | (pred_healthcare == 1) | (pred_law == 1)] = 0\n",
-    "                    batch_preds[(pred_finance != 1) & (pred_healthcare != 1) & (pred_law != 1)] = 1\n",
-    "                    predictions_xgb.extend(batch_preds)\n",
-    "\n",
-    "            # Save predictions for each model\n",
+    "            \n",
+    "            # Save predictions\n",
     "            save_predictions(predictions_svm, dataset_name, 'svm', embedding_model)\n",
     "            save_predictions(predictions_xgb, dataset_name, 'xgb', embedding_model)\n",
     "\n",
-    "\n",
     "        except Exception as e:\n",
-    "            print(f\"Error processing {dataset_name} dataset with {embedding_model} embeddings: {e}\")"
+    "            print(f\"Error processing {dataset_name} dataset with {embedding_model} embeddings: {e}\")\n"
    ]
   },
   {
@@ -448,7 +422,7 @@
     "    print(\"Successfully loaded all ONNX models\")\n",
     "\n",
     "except Exception as e:\n",
-    "    print(f\"Error loading ONNX models: {e}\")\n"
+    "    print(f\"Error loading ONNX models: {e}\")"
    ]
   },
   {
