--- a/src/semantic-router.ipynb
+++ b/src/semantic-router.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\risko\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-04-26 22:34:23 - datasets - INFO - config.py:54 - <module>() - PyTorch version 2.7.0 available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +43,17 @@
     "batch_sizes = [1, 32, 64, 128, 256]\n",
     "\n",
     "domain_data = dataloader.get_domain_data()\n",
-    "domain_data.columns = [\"prompt\", \"dataset\", 'label']\n",
+    "domain_data.columns = [\"prompt\", \"domain\", 'label']\n",
     "\n",
     "ood_data = dataloader.get_ood_data()\n",
     "\n",
     "train_data = dataloader.get_train_datasets()[\"train\"].to_pandas()\n",
-    "train_data.columns = [\"prompt\", \"dataset\", 'label']\n"
+    "train_data.columns = [\"text\", \"domain\", 'label']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,27 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "Please install fastembed to use FastEmbedEncoder. You can install it with: `pip install 'semantic-router[fastembed]'`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\risko\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\semantic_router\\encoders\\fastembed.py:39\u001b[39m, in \u001b[36mFastEmbedEncoder._initialize_client\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfastembed\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TextEmbedding\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'fastembed'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33msentence-transformers/all-MiniLM-L6-v2\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mBAAI/bge-small-en-v1.5\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     embedder = \u001b[43mFastEmbedEncoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mscore_threshold\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.9\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     embedder.name = model \u001b[38;5;66;03m# \u001b[39;00m\n\u001b[32m      4\u001b[39m     embedder._initialize_client()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\risko\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\semantic_router\\encoders\\fastembed.py:34\u001b[39m, in \u001b[36mFastEmbedEncoder.__init__\u001b[39m\u001b[34m(self, score_threshold, **data)\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# TODO default score_threshold not thoroughly tested, should optimize\u001b[39;00m\n\u001b[32m     33\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(score_threshold=score_threshold, **data)\n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m \u001b[38;5;28mself\u001b[39m._client = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\risko\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\semantic_router\\encoders\\fastembed.py:41\u001b[39m, in \u001b[36mFastEmbedEncoder._initialize_client\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     39\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfastembed\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TextEmbedding\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[32m     42\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPlease install fastembed to use FastEmbedEncoder. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     43\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mYou can install it with: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     44\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m`pip install \u001b[39m\u001b[33m'\u001b[39m\u001b[33msemantic-router[fastembed]\u001b[39m\u001b[33m'\u001b[39m\u001b[33m`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     45\u001b[39m     )\n\u001b[32m     47\u001b[39m embedding_args = {\n\u001b[32m     48\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmodel_name\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m.name,\n\u001b[32m     49\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmax_length\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m.max_length,\n\u001b[32m     50\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mcache_dir\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m.cache_dir,\n\u001b[32m     51\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mthreads\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m.threads,\n\u001b[32m     52\u001b[39m }\n\u001b[32m     54\u001b[39m embedding_args = {k: v \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m embedding_args.items() \u001b[38;5;28;01mif\u001b[39;00m v \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m}\n",
-      "\u001b[31mImportError\u001b[39m: Please install fastembed to use FastEmbedEncoder. You can install it with: `pip install 'semantic-router[fastembed]'`"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in [\"sentence-transformers/all-MiniLM-L6-v2\", \"BAAI/bge-small-en-v1.5\"]:\n",
     "    embedder = FastEmbedEncoder(score_threshold=0.9)\n",
@@ -379,6 +351,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
